# Perovskite-ML-papers

./: .gitignore  .~lock.Defense_4800_103_108_118.pptx#  .~lock.Pre defense 4700.pptx#  improved_prompt_template.txt  main.py  prompt.txt  pyproject.toml
A_Multi_class_Dataset_Comparison/: A_Classification_Comparison.ipynb  Multiclass_Comparison.ipynb  Multiclass_Comparison_2.ipynb  cost_sensitive.py  cv_scores_cache.json  dd_hybrid_sampler.py
Anjana et al/: Prediction of Formability and Thermodynamic Stability.ipynb  readme.md  task.md
Wan et al/: Wan et al.docx
Williams et al/: jz0c02201_si_001.txt
_scripts/: sort.py
another paper eric and david/: ml.ipynb  readme.md  task.md
another paper eric and david/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
another paper eric and david/catboost_info/learn/: events.out.tfevents
iBRF/: .~lock.DD_Hybrid_Algorithm.docx#  .~lock.alg.docx#  DD_Hybrid_Algorithm.docx  DD_Hybrid_quick_demo.ipynb  _iBRF_paper results_other_models.ipynb  alg.docx  cv_scores_cache.json  iBRF_Comparison.ipynb  iBRF_paper results_other_models.ipynb
