[project]
name = "perovskite-ml-papers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "xgboost>=3.0.5",
]
